--- a/sql/1-基础.md
+++ b/sql/1-基础.md
@@ -1,4 +1,4 @@
-# 数据库
+# 数据库基础
 
 数据库就是存储和管理数据的仓库，数据按照一定的格式进行存储，用户可以对数据库中的数据进行增加、修改、删除、查询等操作。
 
@@ -101,5 +101,5 @@ docker run --name mysql -e MYSQL_ROOT_PASSWORD=123456 -p 3306:3306 -d mysql
 
 ### MySQL 客户端软件
 
-Data https://www.jetbrains.com/zh-cn/datagrip/
+DataGrip https://www.jetbrains.com/zh-cn/datagrip/
 
