更新代码结构

--- a/sql/3-关键字.md
+++ b/sql/3-关键字.md
@@ -105,3 +105,22 @@ select * from students where height is not null;
 > [!warning]
 >
 > 不能使用 height = null 判断为空，不能使用 height != null 判断非空
+
+## 表查询
+
+### 排序
+
+```mysql
+#                      排序     字段 方式
+select * from students order by id desc
+```
+
+排序方式：
+
+* asc从小到大排列，即升序（默认排序方式）
+* desc从大到小排序，即降序
+
+### 分页
+
+查询数据特别多时，一次性显示不完可以一页一页的进行显示，这就是分页查询。
+
