更新代码结构

--- a/sql/3-关键字.md
+++ b/sql/3-关键字.md
@@ -113,6 +113,7 @@ select * from students where height is not null;
 ```mysql
 #                      排序     字段 方式
 select * from students order by id desc
+select * from students where gender='男' and isdelete = 0 order by id desc
 ```
 
 排序方式：
@@ -123,4 +124,18 @@ select * from students order by id desc
 ### 分页
 
 查询数据特别多时，一次性显示不完可以一页一页的进行显示，这就是分页查询。
+
+```mysql
+#                                            分页 开始位置 长度
+select * from students where isdelete=false limit 0, 2;
+select * from students where isdelete=false limit 2; # 如果从 0 开始 位置可以省略
+```
+
+获取第 n 页数据
+
+```mysql
+select * from students limit (n-1)*m, m
+```
+
+
 
