更新代码结构

--- a/sql/5-范式.md
+++ b/sql/5-范式.md
@@ -27,3 +27,40 @@
 表格拆分后满足第三范式
 
 ![](https://s1.ax1x.com/2023/05/22/p9oUjDf.jpg)
+
+##  E-R模型
+
+E-R模型即实体-关系模型，E-R模型就是描述数据库存储数据的结构模型。
+
+E-R模型的使用场景:
+
+1. 对于大型公司开发项目，我们需要根据产品经理的设计，我们先使用建模工具, 如:power designer，db desinger等这些软件来画出实体-关系模型(E-R模型)
+2. 然后根据三范式设计数据库表结构
+
+![](https://pic2.zhimg.com/80/v2-e1800019d2d6a7f7c1e82468f6fc4391_1440w.webp)
+
+- 实体: 用矩形表示，并标注实体名称
+- 属性: 用椭圆表示，并标注属性名称，
+- 关系: 用菱形表示，并标注关系名称
+  - 一对一
+  - 一对多
+  - 多对多
+
+### 一对一的关系
+
+![](https://s1.ax1x.com/2023/05/22/p9oajzR.png)
+
+- 关系也是一种数据，需要通过一个字段存储在表中
+- 1对1关系，在表A或表B中创建一个字段，存储另一个表的主键值
+
+### 一对多的关系
+
+![](https://s1.ax1x.com/2023/05/22/p9odJln.jpg)
+
+- 1对多关系，在多的一方表中创建一个字段，存储班级表的主键值。
+
+### 多对多的关系
+
+![](https://s1.ax1x.com/2023/05/22/p9odO78.jpg)
+
+- 多对多关系需要一张关系表，这个表只有两个字段，一个用于存储A的主键值，一个用于存储B的主键值。
