更新代码结构

--- a/sql/5-范式.md
+++ b/sql/5-范式.md
@@ -64,3 +64,36 @@ E-R模型的使用场景:
 ![](https://s1.ax1x.com/2023/05/22/p9odO78.jpg)
 
 - 多对多关系需要一张关系表，这个表只有两个字段，一个用于存储A的主键值，一个用于存储B的主键值。
+
+## MySQL 外键
+
+外键约束：对外键字段的值进行更新和插入时会和引用表中字段的数据进行验证，数据如果不合法则更新和插入会失败，保证数据的有效性。
+
+对于已经存在的字段添加外键约束
+
+```mysql
+alter table students add foreign key(cls_id) references classes(id);
+```
+
+在创建数据表时设置外键约束
+
+```mysql
+create table school(
+    id int not null primary key auto_increment, 
+    name varchar(10)
+);
+
+create table teacher(
+    id int not null primary key auto_increment, 
+    name varchar(10), 
+    s_id int not null, 
+    foreign key(s_id) references school(id)
+);
+```
+
+删除外键约束
+
+```mysql
+alter table teacher drop foreign key 外键名;
+```
+
