--- a/sql/7-高级.md
+++ b/sql/7-高级.md
@@ -15,8 +15,125 @@
 
 在使用事务之前，先要确保表的存储引擎是 InnoDB 类型, 只有这个类型才可以使用事务，MySQL数据库中表的存储引擎默认是 InnoDB 类型。
 
+查看MySQL数据库支持的表的存储引擎 `show engines;`
+
+常用的表的存储引擎是 InnoDB 和 MyISAM
+
+* InnoDB 是支持事务的
+* MyISAM 不支持事务，优势是访问速度快，对事务没有要求或者以select、insert为主的都可以使用该存储引擎来创建表
+
+修改数据库引擎 `alter table students engine = 'MyISAM'`
+
+开启事务：
+
+```mysql
+begin;
+或者
+start transaction;
+```
+
+- 开启事务后执行修改命令，变更数据会保存到MySQL服务端的缓存文件中，而不维护到物理表中
+- MySQL数据库默认采用自动提交(autocommit)模式，如果没有显示的开启一个事务,那么每条sql语句都会被当作一个事务执行提交的操作.
+
+`set autocommit = 0` 表示取消自动提交事务模式
+
+```mysql
+set autocommit = 0;
+
+insert into students(name) values('刘三峰');
+```
+
+提交事物 `commit` 
+
+回滚事物 `rollback`
+
+pymysql 中事物操作
+
+1. conn.commit() 操作就是提交事务
+2. conn.rollback() 操作就是回滚事务
+
 ## 索引
 
 索引在MySQL中也叫做“键”，它是一个特殊的文件，它保存着数据表里所有记录的位置信息，更通俗的来说，数据库索引好比是一本书前面的目录，能加快数据库的查询速度。
 
 当数据库中数据量很大时，查找数据会变得很慢，我们就可以通过索引来提高数据库的查询效率。
+
+查看表中已有索引 `show index from students`
+
+主键列会自动创建索引
+
+```mysql
+alter table classes add index idx_name(name); # 创建索引，索引名不指定，默认使用字段名
+
+show create table classes;
+
+alter table classes drop index name;
+```
+
+### 测试查询性能
+
+创建测试表
+
+```mysql
+create table test_index(title varchar(10));
+```
+
+插入多条数据
+
+```python
+conn = pymysql.connect(host="localhost",
+                       port=3306,
+                       user="root",
+                       password="123456",
+                       database="ncut",
+                       charset="utf8")
+
+cursor = conn.cursor()
+sql = "insert into test_index(title) values(%s);"
+
+
+try:
+  for i in range(10000):
+    cursor.execute(sql, ["test" + str(i)])
+    conn.commit()
+    print('ok')
+except Exception as e:
+  conn.rollback()
+  print('error')
+  
+finally:
+  cursor.close()
+  conn.close()
+```
+
+验证索引性能
+
+```python
+set profiling=1;
+select * from test_index where title='test8888';
+show profiles;
+alter table test_index add index (title);
+```
+
+###  联合索引
+
+联合索引又叫复合索引，即一个索引覆盖表中两个或者多个字段，一般用在多个字段一起查询的时候。
+
+```mysql
+alter table students add index (name,age);
+```
+
+联合索引的好处：减少磁盘空间开销，因为每创建一个索引，其实就是创建了一个索引文件，那么会增加磁盘空间的开销。
+
+最左原则：在使用联合索引的时候，要遵守一个最左原则，即index(name,age)支持 name 、name 和 age 组合查询，而不支持单独 age 查询，因为没有用到创建的联合索引。
+
+```mysql
+# 使用联合索引
+select * from students where name='张三';
+select * from students where name='李四' and age=18; 
+
+# 下面的查询没有使用到联合索引
+select * from students where age=10
+```
+
+在使用联合索引的查询数据时候一定要保证联合索引的最左侧字段出现在查询条件里面，否则联合索引失效；
