更新代码结构

--- a/regular/1-简介.md
+++ b/regular/1-简介.md
@@ -126,3 +126,49 @@ ret = re.match("ht{1,3}p", "httttp")
 print(ret)
 ```
 
+## 匹配开头和结尾
+
+| 代码 | 功能           |
+| :--: | :------------- |
+|  ^   | 匹配字符串开头 |
+|  $   | 匹配字符串结尾 |
+
+```python
+import re
+
+ret = re.match("^\d.*", "1abc")
+print(ret.group())
+
+ret = re.match(".*\d$", "aa3")
+print(ret.group())
+
+ret = re.match("^\d.*\d$", "2asdfa3")
+print(ret.group())
+```
+
+## 匹配分组
+
+|     代码     | 功能                             |
+| :----------: | :------------------------------- |
+|      \|      | 匹配左右任意一个表达式           |
+|     (ab)     | 将括号中字符作为一个分组         |
+|    `\num`    | 引用分组num匹配到的字符串        |
+| `(?P<name>)` | 分组起别名                       |
+|  (?P=name)   | 引用别名为name分组匹配到的字符串 |
+
+```python
+import re
+
+ret = re.match("[a-zA-Z0-9_]{4,20}@(163|126|qq)\.com", "hello@163.com")
+print(ret.group())
+
+ret = re.match("(qq:)([1-9]\d{4,11})", "qq:3014587")
+print(ret.group())
+
+ret = re.match("<([a-zA-Z1-6]+)>.*</\\1>", "<html>hh</html>")
+print(ret.group())
+
+ret = re.match("<(?P<name1>[a-zA-Z1-6]+)><(?P<name2>[a-zA-Z1-6]+)>.*</(?P=name2)></(?P=name1)>", "<html><h1>www.itcast.cn</h1></html>")
+print(ret.group())
+```
+
